Category Slider; Footer Fixes; Today I started out with finishing up the Category Slider. Added the Accessories button. Made an Icon for that. Then fixed up the footer. We put the Social Media follow widgets in the footer. Fixed up some spacing. Changed the Logo to have the Registered Trademark.
Former-commit-id: 699af908257ba392c181da069f58303a78823f16

--- a/skin/frontend/default/rofcustom/css/category-slider.css
+++ b/skin/frontend/default/rofcustom/css/category-slider.css
@@ -28,10 +28,7 @@
 
 .category-slider-nav.disabled {
     cursor: default;
-    -webkit-opacity: 0.5;
-    -moz-opacity: 0.5;
-    -o-opacity: 0.5;
-    opacity: 0.5;
+    visibility: hidden;
 }
 
 #category-slider-prev {
@@ -107,6 +104,10 @@
 
 .cat-barsets .category-slider-slide-img {
     background-position: -707px center;
+}
+
+.cat-accessories .category-slider-slide-img {
+    background-position: -795px center;
 }
 
 
