--- a/skin/frontend/default/rofcustom/css/page-footer.css
+++ b/skin/frontend/default/rofcustom/css/page-footer.css
@@ -20,6 +20,8 @@
 
 .footer-box-inner.last {
     border: none;
+    margin-left: -15px;
+    width: 180px;
 }
 
 .footer-links-heading,
@@ -87,7 +89,7 @@
 **********************************************************/
 #footer-newsletter {
     margin: 10px 0 5px;
-    height: 50px;
+    height: 45px;
     display: block;
     position: relative;
 }
@@ -120,7 +122,7 @@
 #footer-newsletter-msg {
     width: 200px;
     text-align: center;
-    padding: 2px 0;
+    padding: 1px 0;
     color: #888;
 }
 
@@ -141,14 +143,15 @@
 
 #footer-social {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 8px;
 }
 
 #footer-social-label {
     top: -2px;
     position: relative;
-    color: #888;
+    color: #8a6399;
     font-family: 'Tahoma';
+    margin-right: 5px;
 }
 
 .footer-social-icon {
@@ -157,36 +160,81 @@
     display: inline-block;
     background: transparent url('../images/footer-social-icon.png') 0 0 no-repeat;
     text-indent: -10000px;
+    margin-left: 4px;
+    border-radius: 2px;
 }
+
+.footer-social-icon.gp,
+.footer-social-icon.tw,
 .footer-social-icon.fb.fb-follow {
-    background-position: 0px 0px;
+    /*background-position:  0px 0px;*/
     text-indent: 0;
     overflow: hidden;
     position: relative;
     left: 1px;
     top: 1px;
 }
+
+.footer-social-icon.gp > *:first-child {
+    -webkit-opacity: 0;
+    -moz-opaciy: 0;
+    -o-opacity: 0;
+    opacity: 0;
+    position: relative;
+    top: -1px;
+    left: -5px;
+}
+
+.footer-social-icon.tw > *:first-child,
 .footer-social-icon.fb.fb-follow > *:first-child {
+    position: relative;
+    top: 20px;
+    left: -3px;
+}
+
+.footer-social-icon.gp:hover > *:first-child {
+    -webkit-opacity: 1;
+    -moz-opaciy: 1;
+    -o-opacity: 1;
+    opacity: 1;
+}
+
+.footer-social-icon.tw:hover > *:first-child,
+.footer-social-icon.fb.fb-follow:hover > *:first-child {
     position: relative;
     top: -3px;
     left: -3px;
-    -webkit-filter: grayscale(1) brightness(1.7);
-    filter: grayscale(1) brightness(1.7);
+}
+.footer-social-icon.fb:hover {
+    background-position:  0px -16px;
 }
 .footer-social-icon.fb {
-    background-position: 0px 0px;
+    background-position:  0px 0px;
+}
+.footer-social-icon.tw:hover {
+    background-position:  -20px -16px;
 }
 .footer-social-icon.tw {
-    background-position: -20px 0px;
+    background-position:  -20px 0px;
+    margin-left: 5px;
+}
+.footer-social-icon.pn:hover {
+    background-position:  -40px -16px;
 }
 .footer-social-icon.pn {
-    background-position: -40px 0px;
+    background-position:  -40px 0px;
+}
+.footer-social-icon.gp:hover {
+    background-position:  -60px -16px;
 }
 .footer-social-icon.gp {
-    background-position: -60px 0px;
+    background-position:  -60px 0px;
+}
+.footer-social-icon.ig:hover {
+    background-position:  -80px -16px;
 }
 .footer-social-icon.ig {
-    background-position: -80px 0px;
+    background-position:  -80px 0px;
 }
 
 /* Logo Section in Footer
@@ -209,6 +257,10 @@
     font-family: 'OpenSans';
     text-align: center;
     width: 100%;
+}
+
+#footer-logo-email a {
+    margin-left: -4px;
 }
 
 #footer-logo-phone {
